--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@reown/appkit": "^1.8.17",
+    "@reown/appkit-adapter-solana": "^1.8.17",
+    "@reown/appkit-adapter-wagmi": "^1.8.17",
     "@solana/client": "^1.2.0",
     "@solana/react-hooks": "^1.1.5",
+    "@tanstack/react-query": "^5.90.20",
+    "lucide-react": "^0.563.0",
     "next": "16.0.10",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "viem": "^2.45.0",
+    "wagmi": "^3.4.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
