--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@solana/client": "^1.2.0",
     "@solana/react-hooks": "^1.1.5",
     "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.3",
+    "axios-retry": "^4.5.0",
     "lucide-react": "^0.563.0",
     "next": "16.0.10",
     "react": "19.2.3",
