--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.3",
     "axios-retry": "^4.5.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
     "next": "16.0.10",
     "react": "19.2.3",
